<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tempActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_id"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_title"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="229dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="278dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="365dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_discount"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="418dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_rating"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="462dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_stock"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="509dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_brand"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="551dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_category"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="597dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="234dp" />

</androidx.constraintlayout.widget.ConstraintLayout>